# mac-notification-sys

./: .clang-format  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  LICENSE.md  README.md  aliases.js  build.rs  bumpversion.sh  crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
.github/workflows/: ci.yml  clang-format.yml  release.yml  rustfmt.yml  semver-checks.yml
bundle/: Info.plist  run.sh  rust-logo.icns
chrono/: enum.Weekday.html  index.html  sidebar-items.js  struct.Duration.html  trait.Datelike.html  trait.Timelike.html
chrono/date/: constant.MAX.html  constant.MIN.html  index.html  struct.Date.html
chrono/datetime/: index.html  struct.DateTime.html
chrono/format/: enum.Fixed.html  enum.Item.html  enum.Numeric.html  enum.Pad.html  fn.format.html  fn.parse.html  index.html  struct.DelayedFormat.html  struct.InternalFixed.html  struct.InternalNumeric.html  struct.ParseError.html  type.ParseResult.html
chrono/naive/: index.html
chrono/offset/: enum.LocalResult.html  index.html  trait.Offset.html  trait.TimeZone.html
chrono/prelude/: index.html
examples/: actions.rs  bg_thread.rs  busy_spin_repro.rs  click.rs  date.rs  default_app.rs  on_close.rs  parallel.rs  send_notification.rs  simple.rs  sound.rs  two_simple.rs
implementors/error_chain/: trait.ChainedError.js
implementors/failure/: trait.Fail.js
implementors/num_integer/: trait.Integer.js
implementors/num_traits/: trait.Num.js
mac_notification_sys/: all.html  enum.MainButton.html  enum.NotificationResponse.html  enum.Sound.html  fn.get_bundle_identifier.html  fn.get_bundle_identifier_or_default.html  fn.schedule_notification.html  fn.send_notification.html  fn.set_application.html  get_bundle_identifier.v.html  get_bundle_identifier_or_default.v.html  index.html  schedule_notification.v.html  send_notification.v.html  set_application.v.html  sidebar-items.js  struct.Notification.html
mac_notification_sys/error/: ApplicationError.t.html  NotificationError.t.html  NotificationResult.t.html  enum.ApplicationError.html  enum.Error.html  enum.ErrorKind.html  enum.NotificationError.html  index.html  sidebar-items.js  struct.Error.html  trait.ResultExt.html  type.NotificationResult.html  type.Result.html
mac_notification_sys/notification/: enum.MainButton.html  enum.NotificationResponse.html  enum.Sound.html  struct.Notification.html
num/: fn.abs.html  fn.abs_sub.html  fn.checked_pow.html  fn.clamp.html  fn.one.html  fn.range.html  fn.range_inclusive.html  fn.range_step.html  fn.range_step_inclusive.html  fn.signum.html  fn.zero.html  index.html  trait.Bounded.html  trait.CheckedAdd.html  trait.CheckedDiv.html  trait.CheckedMul.html  trait.CheckedSub.html  trait.Float.html  trait.FromPrimitive.html  trait.Integer.html  trait.Num.html  trait.NumCast.html  trait.One.html  trait.PrimInt.html  trait.Saturating.html  trait.Signed.html  trait.ToPrimitive.html  trait.Unsigned.html  trait.Zero.html
num/cast/: fn.cast.html  index.html  trait.FromPrimitive.html  trait.NumCast.html  trait.ToPrimitive.html
num/integer/: index.html
num/iter/: index.html
num/pow/: fn.checked_pow.html  fn.pow.html  index.html
num/traits/: index.html
num_integer/: fn.div_floor.html  fn.div_mod_floor.html  fn.div_rem.html  fn.gcd.html  fn.lcm.html  fn.mod_floor.html  index.html  trait.Integer.html
num_iter/: fn.range.html  fn.range_inclusive.html  fn.range_step.html  fn.range_step_inclusive.html  index.html  struct.Range.html  struct.RangeInclusive.html  struct.RangeStep.html  struct.RangeStepInclusive.html
num_traits/: enum.FloatErrorKind.html  fn.clamp.html  index.html  struct.ParseFloatError.html  trait.Num.html
objc/: libnotify.m  notify.h  notify.m  notify.mm
src/: bind.rs  bridge.rs  builder.rs  data.rs  error.rs  lib.rs  main.rs  notification.rs  os.rs  pending_guard.rs  util.rs  utilities.rs
tests/: application.rs  time.rs
(+215 files in other folders)
