[package]
name = "mac-notification-sys"
version = "0.5.6"
authors = [
  "Felix Döring <development@felixdoering.com>",
  "Hendrik Sollich <hendrik@hoodie.de>",
]
description = "Thin wrapper around macOS Notifications."
edition = "2021"

homepage = "https://github.com/h4llow3En/mac-notification-sys"
repository = "https://github.com/h4llow3En/mac-notification-sys"
documentation = "https://h4llow3en.github.io/mac-notification-sys/mac_notification_sys/"

license = "MIT"
keywords = ["notification", "masOS", "osx", "notify"]
readme = "README.md"

include = ["Cargo.toml", "src/*.rs"]

[[example]]
name = "simple"

[dependencies]
objc2 = "0.4.0"
icrate = { version = "0.0.3", features = [
  "UserNotifications_all",
  "Foundation",
  "Foundation_NSArray",
  "Foundation_NSString",
  "Foundation_NSRunLoop",
  "Foundation_NSError",
  "Foundation_NSDate",
  "Foundation_NSDateComponents",
  "Foundation_NSURL",
  "Foundation_NSMutableDictionary",
  "Foundation_NSNumber",
  "Foundation_NSProcessInfo",
  "Foundation_NSMutableArray",
  "UniformTypeIdentifiers"
] }
bitflags = "^2.3"
cron = "^0.12"
url = "^2.4"
futures = "^0.3"
chrono = "^0.4"
uuid = {version = "^1.4", features = ["v4"]}
lazy_static = "^1.4"

[dev-dependencies]
async-io = "^1.13"

[build-dependencies]
cfg_aliases = "^0.1"
