[package]
name = "mac-notification-sys"
version = "0.5.6"
authors = [
  "Felix Döring <development@felixdoering.com>",
  "Hendrik Sollich <hendrik@hoodie.de>",
]
description = "Thin wrapper around macOS Notifications."
edition = "2021"

homepage = "https://github.com/h4llow3En/mac-notification-sys"
repository = "https://github.com/h4llow3En/mac-notification-sys"
documentation = "https://h4llow3en.github.io/mac-notification-sys/mac_notification_sys/"

license = "MIT"
keywords = ["notification", "masOS", "osx", "notify"]
readme = "README.md"

include = ["Cargo.toml", "src/*.rs"]

[[example]]
name = "simple"

[dependencies]
objc2 = "0.4.0"
icrate = { version = "0.0.3", features = [
  "Foundation",
  "Foundation_NSProcessInfo",
  "Foundation_NSDate",
  "Foundation_NSRunLoop",

] }
bitflags = {version="^2.3", optional = true}
cron = {version = "^0.12", optional = true}
url = {version ="^2.4", optional = true}
futures = "^0.3"
chrono = {version = "^0.4", optional = true}
uuid = {version = "^1.4", features = ["v4"], optional = true}
lazy_static = "^1.4"

[features]
default = ["ns-first"]
un = [
  "icrate/UserNotifications_all",
  "icrate/Foundation_NSArray",
  "icrate/Foundation_NSString",
  "icrate/Foundation_NSError",
  "icrate/Foundation_NSDateComponents",
  "icrate/Foundation_NSURL",
  "icrate/Foundation_NSMutableDictionary",
  "icrate/Foundation_NSNumber",
  "icrate/Foundation_NSMutableArray",
  "icrate/UniformTypeIdentifiers",
  "dep:uuid",
  "dep:cron",
  "dep:url",
  "dep:bitflags",
  "dep:chrono"
]
ns = []
ns-first = ["un", "ns"]
un-first = ["un", "ns"]

[dev-dependencies]
async-io = "^1.13"

[build-dependencies]
cfg_aliases = "^0.1"
